--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,6 +46,10 @@
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:paddingStart="@dimen/_12sdp"
+        android:paddingEnd="@dimen/_12sdp"
+        android:paddingTop="@dimen/_4sdp"
+        android:paddingBottom="@dimen/_4sdp"
         android:visibility="visible"
         android:layout_below="@+id/ll_search"
         android:id="@+id/rv_recent_search"
@@ -54,6 +58,10 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
+        android:paddingStart="@dimen/_12sdp"
+        android:paddingEnd="@dimen/_12sdp"
+        android:paddingTop="@dimen/_4sdp"
+        android:paddingBottom="@dimen/_4sdp"
         tools:listitem="@layout/layout_image_item"
         android:layout_below="@+id/rv_recent_search"
         android:id="@+id/rv_search_results"
